2006-03-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/getconfig/getconfig.pl: 
	Add ast driver/pci id (Carl Switzky, Sun Microsystems)

2006-03-22  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Improve error logging.

Wed Mar 22 16:28:46 2006  Søren Sandmann  <sandmann@redhat.com>

	* fb/fbmmx.c (fbCopyAreammx): Use inline assembly for copy area,
	since gcc doesn't generate movq instructions.

Wed Mar 22 16:05:09 2006  Søren Sandmann  <sandmann@redhat.com>

	* fb/fbmmx.c (fbSolidFillmmx): Use inline assembly for solid
	fills, since gcc doesn't use the movq instructions.

Wed Mar 22 13:42:44 2006  Søren Sandmann  <sandmann@redhat.com>

	* mi/mivaltree.c (miComputeClips): Patch by Keith Packard to make
	sure redirected windows don't get considered "FullyObscured".

2006-03-21  Kristian Høgsberg  <krh@redhat.com>

	Make the server distcheck and tag 1.0.99.1 snapshot.
	
	* configure.ac: Bump CVS version to 1.0.99.1.

	* Makefile.am:
	* os/Makefile.am: 
	* Xext/Makefile.am: 
	* GL/mesa/glapi/Makefile.am:  Distcheck fixes.

2006-03-21  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c: 
	* GL/glx/glxcmdsswap.c: #include indirect_dispatch to get
	prototypes for FBO functions.

	* GL/glx/glxcontext.h: 
	* GL/glx/glxserver.h: 
	* GL/glx/glxdri.c: Fix a couple of warnings.

2006-03-20  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Kristian Høgsberg

	* GL/glx/glxscreens.c: (__glXHyperpipeInit),
	(__glXSwapBarrierInit):
	* GL/glx/glxutil.h:
	* GL/glx/single2.c: (__glXDisp_FeedbackBuffer),
	(__glXDisp_SelectBuffer):
	* GL/glx/single2swap.c: (__glXDispSwap_FeedbackBuffer),
	(__glXDispSwap_SelectBuffer):
	Finish glx_ansic.h wrapper changes to make Xvfb and Xnest link again.

2006-03-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Init.c:
	Bug #6213: Check geteuid's return value, not its address, otherwise
	unprivileged users can set the modulepath and run arbitrary code.